# cassiopee-c

./: .cproject  .gitignore  .project  CMakeLists.txt  Cassiopee.vcxproj  Changelog  LICENSE  README.md  cassiopee.sln  cassiopee.sln.nuspec  cassiopeeknife.vcxproj  index.html  packages.config  params.json
.circleci/: config.yml
cassie/: cassie.sln
cassie/cassie/: cassie.vcxproj  cassie.vcxproj.filters  packages.config
cassie/cassie/Debug/: vc140.idb
cassie/cassie/Debug/cassiopee.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cassiopee.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cassie/knife/: knife.vcxproj  knife.vcxproj.filters
cassie/knife/Debug/: vc140.idb
cassie/knife/Debug/knife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  knife.lastbuildstate  knife.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: .cassiopee.cxx.swp  CMakeLists.txt  Cassiopee.h  CassiopeeConfig.h.in  Doxyfile.in  cassie.cxx  cassiopee.cxx  knife.cxx
src/win/: getopt.h
test/: CMakeLists.txt  pattern.txt  protein.txt  sequence.txt  test.cxx  test.h  test.py  test.txt  test2.fasta.cass
win/knife/: cassiopeeknife.vcxproj
